Fixed Tab Title Alignment

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -176,15 +176,17 @@ QTabWidget::pane {
     border-top: 1px solid #ccc;
 }
 
+/* paintEvent of src/tabbar.cpp references the value of border and padding */
 QTabBar::tab {
     border: 1px solid #ccc;
     border-radius: 0;
-    padding: 2px;
+    padding: 4px;
+    padding-top: 6px;
 }
 
 QTabBar::tab:selected {
     background-color: white;
-    border-bottom: 2px solid white;
+    border-bottom: 1px solid white;
 }
 
 QTabBar::tab:first {
